# rain

./: Cargo.toml  build.rs
concept/: linexp.py
src/: lib.rs  linexp.rs  main.rs  signalgen.rs  wavetables.rs
src/osc/: mod.rs  wave_table_osc.rs  wave_tables.rs
src/osc/wave_tables/: exp_i16.rs  exp_i32.rs  exp_i8.rs  sine_i16.rs
wavetables/: sine_i32.rs  sine_i8.rs
