[package]
name = "rain"
version = "0.1.0"
edition = "2021"
authors = ["Korbinian Schreiber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = "0.4.0"
rodio = "0.16.0"

[profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*